refactor to use english names
