# src/app/features/reisen/api/model/changeAngebotQueryDto.ts
@@ -1,13 +1,0 @@
-/**
- * OpenAPI definition
- *
- *
- *
- * NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
- * https://openapi-generator.tech
- * Do not edit the class manually.
- */
-
-export interface ChangeAngebotQueryDto {
-    index?: number;
-}
