# src/app/features/reisen/api/model/searchAngebotQueryDto.ts
@@ -1,14 +1,0 @@
-/**
- * OpenAPI definition
- *
- *
- *
- * NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
- * https://openapi-generator.tech
- * Do not edit the class manually.
- */
-
-export interface SearchAngebotQueryDto {
-    name?: string;
-    nights?: number;
-}
