# src/app/features/trip/api/model/models.ts
@@ -1,0 +1,4 @@
+export * from './changeTravelOfferQueryDto';
+export * from './pageDtoTravelOffersDetailsDto';
+export * from './searchTravelOffersQueryDto';
+export * from './travelOfferDetailsDto';
