# src/app/features/trip/api/model/pageDtoTravelOffersDetailsDto.ts
@@ -1,0 +1,15 @@
+/**
+ * OpenAPI definition
+ *
+ *
+ *
+ * NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
+ * https://openapi-generator.tech
+ * Do not edit the class manually.
+ */
+import {TravelOfferDetailsDto} from './travelOfferDetailsDto';
+
+export interface PageDtoTravelOffersDetailsDto {
+    elements: Array<TravelOfferDetailsDto>;
+    totalCount: number;
+}
